# ttask-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ttask_manager/: ttask_manager.py
ttask_manager/: __init__.py  ttask_manager.py
